didn't try the next IP if the first one failed and returned error.

Fixed: Issue #764: Monit may crash if "unmonitor" or "stop" action was triggered by some test

Fixed: Issue #769: Monit CLI status command doesn't work if only read-only credentials is present
in the 'set httpd' statement.

Fixed: Issue #784: Radius protocol test regression from 5.25.2. Thanks to Jason Young for patch.

Fixed: The CPU user/system/wait statistics may show negative value if the system counter jumps back or wraps.


Version 5.25.2

New: Issue #123: Added a bash completion script for monit command-line. The script is not installed
by default, if you want to enable the bash completion for monit, copy system/bash/monit file to
/etc/bash_completion.d/ directory or similar (depends on your bash installation). The script allows
to complete monit actions, service names, service group names, procmatch pattern and command-line options.

Fixed: Issue #693: If the space usage test is set with an absolute value and the monitored
filesystem is not mounted on boot, monit returned error during configuration parsing and stopped.

Fixed: Issue #699: Monit reload is slow when triggered in the middle of the poll cycle.

Fixed: Linux: If a process is terminated while Monit collects the process information, the calculation
of resource usage might be incorrect. Thanks to Joshua Griffiths for patch.

Fixed: Collect system statistics even if process statistics failed (independent)

Fixed: Reduce the state file related overhead

Fixed: The ICMPv4 ping test failed if the payload size was set to less then 20 bytes. The minimum payload
size is now 8 bytes.

Fixed: The port connection test may be skipped on some 32-bit platforms.

Changed: HTTP protocol test: switched the default protocol from HEAD to GET. The HEAD method is not
supported by some webservers thus the simplified test syntax failed for some users if the method was